# efference-website

./: .gitignore  README.md  activate_tasks.py  amplify.yml  carousel.js  deploy.sh  gallery.css  gallery.html  index.html  package-lock.json  schema.sql  style.css  styles.css
backend/: .env  .env.example  README.md  auth.py  crud.py  database.py  deploy.sh  efference.db  main.py  requirements-prod.txt  requirements.txt  samconfig.toml  schemas.py  template.yaml  test.db
backend/.aws-sam/: build.toml
backend/alembic/: env.py
backend/alembic/versions/: 94b4e774ca45_add_invitation_system_tables_and_user_.py  d0803b3034e1_initial_migration_create_all_tables.py  dc516ab061d1_add_invitation_system.py
backend/app/: config.py  main.py  seed.py
backend/app/db/: models.py
backend/app/routers/: auth.py  dashboard.py  invitations.py  payments.py  reviews.py  sessions.py  task_assignments.py  tasks.py  upload.py  users.py
backend/app/services/: auth.py  crud.py  database.py  email.py  schemas.py
backend/db/: models.py
backend/routers/: auth.py  reviews.py  tasks.py
frontend/frontend/: README.md  database-setup.sql  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/frontend/src/app/: globals.css  layout.tsx  page.tsx
preorder/: index.html
serve/: .gitignore
serve/backend/: .env.example  .gitignore  main.py  pyproject.toml
serve/backend/app/: config.py  models.py
serve/backend/app/routes/: datasets.py  downloads.py
serve/backend/app/services/: s3_service.py
serve/frontend/: .gitignore
uploadz/: .gitignore  README.md
(+33 files in other folders)
